# habit-tracker

./: CMakeLists.txt  habits.db  habits.json
include/: Habit.h  HabitManager.h
src/: Habit.cpp  HabitManager.cpp  main.cpp
